--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <div style="text-align:center; margin-top:40px"><img src = "MANIKANDAN.jpg">
+  
+<h1 style="font-size:40px; text-align:center; color: #333;">Hello Vishwa! Hope you're doing well.</h1>  
 
-<h1 style="font-size:40px; text-align:center;">Hello Vishwa! Hope you doing good</h1>
+<p style="font-size:40px; text-align:center; line-height:30px; margin-bottom:50px; color: #555;">  
+    "Welcome to the real world. It may be tough, but you'll love it!"  
+</p>  
 
-<p style="font-size:40px; text-align:center; line-height: 30px; margin-bottom:50px ;">"Welcome to the real world. It sucks. You're gonna love it!"</p>
+<hr style="border: 2px solid #6a3254; margin: 20px 0;">  
 
-<hr>
+<h1 style="font-size:40px; text-align:center; color:#6a3254;">Look at how beautiful you are!</h1>  
 
-<h1 style="font-size:40px; text-align:center;color: #6a3254;">See ! How beautiful you are ?</h1>
+<div style="display: flex; justify-content: center; flex-wrap: wrap; margin-bottom: 40px;">  
+    <img style="width:49%; height: auto; border-radius: 10px; margin-right: 1%; transition: transform 0.2s;" src="image3.jpg" alt="A beautiful image showcasing your essence">  
+    <img style="width:49%; height: auto; border-radius: 10px; transition: transform 0.2s;" src="image2.jpg" alt="Another stunning image">  
+</div>  
 
-<img style="width: 49%"; src = "image3.jpg">
-<img style="width: 49%"; src = "image2.jpg">
+<p style="font-size:24px; color: #888; text-align:center; max-width: 800px; margin: 0 auto;">  
+    Embrace every moment, cherish the experiences, and remember that every challenge is an opportunity for growth. You are capable of amazing things!  
+</p>  
 
+<h2 style="font-size:32px; color: #6a3254; margin-top: 40px;">Keep shining brightly!</h2>
 
 
